Fixed scrollbar

--- a/seeder/src/pages/Seeder.css
+++ b/seeder/src/pages/Seeder.css
@@ -25,7 +25,7 @@ button {
 }
 
 .panel-container {
-    overflow: scroll;
+    overflow-y: scroll;
     padding: 15px;
 }
 
